Fri 18 Sep 2009 15:39:10 BST  Tom Mortimer <tom@flax.co.uk>

    * docs/tutorial/php,
    * docs/tutorial/php/t1_create_db.php,
    * docs/tutorial/php/t2_show_schema.php,
    * docs/tutorial/php/t3_index_books.php,
    * docs/tutorial/php/t4_show_db_info.php,
    * docs/tutorial/php/t5_get_doc.php,
    * docs/tutorial/php/t6_search.php,
    * docs/tutorial/php/t7_search_author.php: Added PHP tutorial files.

Fri 18 Sep 2009 15:05:21 BST  Tom Mortimer <tom@flax.co.uk>

    * clients/php/unittests/test_search.php,
    * clients/php/unittests/test_fields.php,
    * clients/php/unittests/test_docs.php,
    * clients/php/flax/flaxclient.php,
    * clients/php/flax/flaxjsonobject.php,
    * clients/php/flax/flaxfield.php,
    * clients/php/flax/_restclient_curl.php,
    * clients/php/flax/flaxsearch.php,
    * clients/php/examples/newsml_indexer.php: Replaced commit() with flush(),
      also tidied up whitespace.

Fri 18 Sep 2009 12:42:41 BST  Tom Mortimer <tom@flax.co.uk>

    * docs/tutorial/flax_search_service_tutorial.txt: Removed most 
      references to curl command, as this is distracting.

Fri 28 Aug 2009 14:45:17 BST  Tom Mortimer <tom@flax.co.uk>

    * tutorial/flax_search_service_tutorial.txt,
    * tutorial/python/t6_search.py,
    * tutorial/python/t7_search_author.py: Added search bit to tutorial and
      made the scripts report "no results" in a more helpful way.

Fri 28 Aug 2009 11:25:43 BST  Tom Mortimer <tom@flax.co.uk>

    * completed Indexing Documents section of tutorial.

Fri 28 Aug 2009 10:36:43 BST  Tom Mortimer <tom@flax.co.uk>
    
    * reformatted tutorial text to fit 80-column width

Fri 28 Aug 2009 09:54:50 BST  Tom Mortimer <tom@flax.co.uk>

    * moved tutorial to flax_search_server/docs

Fri 28 Aug 2009 09:43:50 BST  Tom Mortimer <tom@flax.co.uk>

    * moved client libraries under flax_search_server as they are
      dependant projects.

Fri Jul 31 14:20:19 BST 2009  Tom Mortimer <tom@flax.co.uk>
